--- a/questioner/templates/questioner/index.html
+++ b/questioner/templates/questioner/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="{% static 'questioner/index.css' %}">
         <!-- Load search_filter functions for the search menu, difficulty filtering, and question type filtering -->
         <script src="{% static 'questioner/search_filter.js' %}" type="text/javascript"></script>
-        <!-- Load loading_spin function to enable loading screen -->
+        <!-- Load loading_index function to enable loading screen -->
         <script src="{% static 'questioner/loading.js' %}" type="text/javascript
         "></script>
     </head>
@@ -139,7 +139,7 @@
                         {% if user.etype == question.allowed_etype or question.allowed_etype == "all" %}
                             {% if question|stringformat:"s" in user.completed_history.keys %}
                                 <p>You have completed this challenge before ...</p>
-                                <form action="{% url 'questioner:modelling' question.question_type question.question_id user.os_user_id 1 %}" onsubmit="loading_spin()">
+                                <form action="{% url 'questioner:modelling' question.question_type question.question_id user.os_user_id 1 %}" onsubmit="loading_index()">
                                     <input type="submit" value="Retry this question"/>
                                 </form>
                                 <form action="{% url 'questioner:complete' question.question_type question.question_id user.os_user_id %}">
@@ -147,7 +147,7 @@
                                     <input type="submit" value="View best performance"/>
                                 </form>
                             {% else %}
-                                <form action="{% url 'questioner:modelling' question.question_type question.question_id user.os_user_id 1 %}" onsubmit="loading_spin()">
+                                <form action="{% url 'questioner:modelling' question.question_type question.question_id user.os_user_id 1 %}" onsubmit="loading_index()">
                                     <input type="submit" value="Start this question"/>
                                 </form>
                             {% endif %}
