Improvements to dashboard MVP

--- a/data_miner/templates/data_miner/dashboard.html
+++ b/data_miner/templates/data_miner/dashboard.html
@@ -9,7 +9,7 @@
     <body>
         <!-- Load app logo at the top of the page -->
         <div id="logo">
-            <img id="logo" src="{% static 'questioner/images/logo.svg' %}" alt="app_logo"/>
+            <img src="{% static 'questioner/images/logo.svg' %}" alt="app_logo"/>
         </div>
         <br /><br />
         <!-- Options to view data for specific questions -->
