Add time spent comparison plot to dashboard_q

--- a/data_miner/templates/data_miner/dashboard_q.html
+++ b/data_miner/templates/data_miner/dashboard_q.html
@@ -32,6 +32,8 @@
         <div>
             <img src="{{ time_spent }}" alt="" class="center"/> 
             <br /><br />
+            <img src="{{ time_spent_comparison }}" alt="" class="center"/>
+            <br /><br />
             <img src="{{ feature_cnt }}" alt="" class="center"/> 
             <br /><br />
             {% if additional_plots %}
