--- a/data_miner/static/data_miner/dashboard_q.css
+++ b/data_miner/static/data_miner/dashboard_q.css
@@ -48,3 +48,17 @@ input[type=submit] {
 input[type=submit]:hover {
     background-color: #bbb;
 }
+
+/* Table */
+table {
+    border-collapse: collapse;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+  
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
