Add cumulative question attempts plot

--- a/data_miner/templates/data_miner/dashboard.html
+++ b/data_miner/templates/data_miner/dashboard.html
@@ -36,6 +36,8 @@
             </div>
         </div>
         <!-- Distribution plots -->
+        <img src="{{ cum_attempt_cnt }}" alt="" class="center">
+        <br /><br />
         <img src="{{ succ_fail_cnt }}" alt="" class="center"/> 
         <br /><br />
         <img src="{{ time_spent }}" alt="" class="center"/> 
