--- a/data_miner/templates/data_miner/dashboard_q.html
+++ b/data_miner/templates/data_miner/dashboard_q.html
@@ -30,6 +30,8 @@
         </div> 
         <!-- Plots -->
         <div>
+            <img src="{{ cum_attempt_cnt }}" alt="" class="center">
+            <br /><br />
             <img src="{{ time_spent }}" alt="" class="center"/> 
             <br /><br />
             <img src="{{ time_spent_comparison }}" alt="" class="center"/>
