--- a/questioner/static/questioner/index.css
+++ b/questioner/static/questioner/index.css
@@ -3,7 +3,7 @@ body {
     color: #333;
     font-family: Flama,Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
-
+    
 h3 {
     margin-bottom: 0px;
 }
@@ -53,13 +53,12 @@ ol {
     border: 1px 1px solid #ddd;
 }
 
-/* Style the button group for difficulty filtering */
-.btn-group input.radio {
+/* Style the button groups for difficulty and type filtering */
+.level-group input.radio, .type-group input.radio {
 	display: none;
 }
 
-.btn-group input.radio ~ label {
-    width: 25%;
+.level-group input.radio ~ label, .type-group input.radio ~ label {
     border-radius: 5px;
     background-color: #eee;
 	float: left;
@@ -70,14 +69,21 @@ ol {
     font-size: 14px;
 }
 
-.btn-group input.radio:hover ~ label, .btn-group input.radio:checked ~ label{
+.level-group input.radio ~ label {
+    width: 25%;
+}
+
+.type-group input.radio ~ label {
+    width: 20%;
+}
+
+.level-group input.radio:hover ~ label, .level-group input.radio:checked ~ label, .type-group input.radio:hover ~ label, .type-group input.radio:checked ~ label{
     background-color: #bbb;
 }
 
 #reviewer_filter {
     margin-bottom: 1em;
 }
-
 
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
