--- a/questioner/templates/questioner/modelling.html
+++ b/questioner/templates/questioner/modelling.html
@@ -6,8 +6,7 @@
         <!-- Load pop-up alert when user trying to go back to index while modelling -->
         <script src="{% static 'questioner/modelling.js' %}" type="text/javascript"></script>
         <!-- Load loading_modelling function to enable loading screen -->
-        <script src="{% static 'questioner/loading.js' %}" type="text/javascript
-        "></script>
+        <script src="{% static 'questioner/loading.js' %}" type="text/javascript"></script>
     </head>
     <body>
         <div id="navbar">
