Added terms of service

--- a/questioner/templates/questioner/home.html
+++ b/questioner/templates/questioner/home.html
@@ -111,6 +111,15 @@
             <h3 id="at-give-up-confirmation">At give-up confirmation</h3>
             <p>After the first failed submission attempt, the user is given the option to &quot;give-up&quot; on the question. The &quot;give-up&quot; button is available if and only if at least one failed submission has been made. At the point when the user gives up the question, the same types of data are collected as if the submission attempt was successful, as detailed in the <a href="#at-successful-completion">previous section</a>. However, the field for the boolean field <code>is_final_failure</code> will be set to be <code>True</code>. </p>
         </div>
+        <!-- Terms of Service -->
+        <div>
+            <h1 id="terms-of-service">Terms of Service</h1>
+            <p>This application is provided solely as a free convenience to users and is provided on an "as is" basis, without warranty of any kind, express or implied, including but not limited to the warranties of merchantability, fitness for a particular purpose, and non-infringement.</p>
+            <p>This application is not part of your Onshape subscription and Onshape has no obligations to provide support or maintenance for this application. By using this application, a user agrees and acknowledges that in no event shall PTC be liable for any claim, damages, or other liability, whether in an action of contract, tort, or otherwise, arising from, out of, or in connection with the used product, including any software vulnerabilities or security incidents.</p>
+            <p>By using this application, you are also agreeing to have anonymized data about your modelling process recorded and used for research purposes. See the <a href=#documentation-on-data-collection>documentation on data collection section</a> to learn more.</p>
+            <h2 id="contact_us">Contact Us</h2>
+            <p><a href="mailto:edutech@ptc.com">edutech@ptc.com</a></p>
+        </div>
         {% if user %}
             <!-- Return to the home page -->
             <br />
