--- a/data_miner/static/data_miner/dashboard.css
+++ b/data_miner/static/data_miner/dashboard.css
@@ -83,3 +83,50 @@ body {
 h3 {
     display: inline;
 }
+
+/* Loader */
+.loader .smaller_loader {
+    position: relative;
+
+}
+.loader:after {
+    content: " ";
+    z-index: 10;
+    display: block;
+    position: absolute;
+    border: 10px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 10px solid #3498db;
+    width: 80px;
+    height: 80px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+}
+
+.smaller_loader:after {
+  border: 6px solid #f3f3f3;
+  border-top: 6px solid #3498db;
+  width: 30px;
+  height: 30px;
+
+}
+
+/* Loader in Safari */
+@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
+  .spinner-container{
+    display: flex;
+    gap: 50px;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+  
+  }
