Added app-opening instructions

--- a/questioner/static/questioner/home.css
+++ b/questioner/static/questioner/home.css
@@ -26,3 +26,8 @@ input[type=submit] {
 input[type=submit]:hover {
     background-color: #bbb;
 }
+
+#right-panel {
+    width: 800px;
+    max-width: 100%;
+}
