Added favicon to home page

--- a/questioner/templates/questioner/home.html
+++ b/questioner/templates/questioner/home.html
@@ -3,6 +3,7 @@
     <head>
         {% load static %}
         <link rel="stylesheet" href="{% static 'questioner/home.css' %}">
+        <link rel="shortcut icon" type="image/svg" href="{% static 'questioner/images/icon.svg' %}" >
     </head>
     <body>
         {% if user %}
