--- a/questioner/templates/questioner/index.html
+++ b/questioner/templates/questioner/index.html
@@ -12,7 +12,7 @@
     <body>
         <!-- Load app logo at the top of the page -->
         <div id="logo">
-            <img id="app_logo" src="{% static 'questioner/images/logo.svg' %}" alt="app_logo" width="95%"/>
+            <img id="app_logo" src="{% static 'questioner/images/logo.svg' %}" alt="app_logo" />
         </div>
         <!-- Print out error message if any -->
         <div>
@@ -165,7 +165,7 @@
         <br /><br />
         <!-- Disclaimer -->
         <div>
-            <p id="disclaimer"><a href="{% url 'questioner:home' user.os_user_id %}#terms-of-service">Terms of Service</a> | <a href="{% url 'questioner:home' user.os_user_id %}#details">Detailed Instructions</a> | <a href="https://docs.google.com/forms/d/e/1FAIpQLSeOcFJo3V05CMtQSAXmmiF22xdfsdaob7_tBCTCDEwZVdVRwA/viewform?usp=sf_link">Feedback</a></p>
+            <p id="disclaimer"><a href="{% url 'questioner:dashboard' user.os_user_id %}">User Dashboard</a> | <a href="{% url 'questioner:home' user.os_user_id %}#terms-of-service">Terms of Service</a> | <a href="{% url 'questioner:home' user.os_user_id %}#details">Detailed Instructions</a> | <a href="https://docs.google.com/forms/d/e/1FAIpQLSeOcFJo3V05CMtQSAXmmiF22xdfsdaob7_tBCTCDEwZVdVRwA/viewform?usp=sf_link">Feedback</a></p>
         </div>
         <!-- Enable hide-and-show for accordions -->
         <script src="{% static 'questioner/accordion.js' %}" type="text/javascript"></script>
