--- a/questioner/templates/questioner/dashboard.html
+++ b/questioner/templates/questioner/dashboard.html
@@ -85,9 +85,9 @@
             </section>
             <h3>Certificates</h3>
             <!-- Certificate -->
-            <div class="cert_div">
+            <div class="cert_div"><a href="data:image/png;base64,{{ cert_image }}" target="_blank">
                 <img class="cert_image" src="data:image/png;base64,{{ cert_image }}">
-            </div>
+            </a></div>
             <h2 id="contact_us">Contact Us</h2>
             <p><a href="mailto:edutech@ptc.com">edutech@ptc.com</a></p>
         </div>
