--- a/questioner/static/questioner/index.css
+++ b/questioner/static/questioner/index.css
@@ -181,3 +181,19 @@ input[type=submit]:hover {
     display: flex;
     width:fit-content;
 }
+
+.cert_assem, .cert_surf {
+    font-size: 10px;
+    margin: 16px 0px 0px 5px;
+    color: #fff;
+    padding: 2px;
+    border-radius: 4px;
+}
+
+.cert_assem {
+    background-color: #40AA1D;
+}
+
+.cert_surf {
+    background-color: #C37729;
+}
